--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "keywords": [
     "Movie"
   ],
-  "author": "Shawn McCarthy",
+  "author": "Mason Turner",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/masonat/CSC3916_HW2/issues"
